--- a/f2.html
+++ b/f2.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+ <section>
+    <div>
+        <ul>
+            <li>hi</li>
+        </ul>
+    </div>
+ </section>
 </body>
 </html>
