--- a/f1.html
+++ b/f1.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning git</title>
+    <title>Learning </title>
 </head>
 <body>
-    
+    this line added in branch
     
 </body>
 </html>
